--- a/Webapp/src/main/resources/application.properties
+++ b/Webapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Webapp
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-#logging.level.com=DEBUG
-logging.level.org.springframework=debug
+#logging.level.web=DEBUG
+#logging.level.org.springframework=debug
