--- a/Webapp/src/main/resources/application.properties
+++ b/Webapp/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.mvc.view.suffix=.jsp
 #logging.level.web=DEBUG
 #logging.level.org.springframework=debug
 spring.mvc.format.date=yyyy-MM-dd
+spring.datasource.url=jdbc:h2:mem:testdb
